--- a/motd.html
+++ b/motd.html
@@ -1,51 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>MOTD</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-            font-family: Arial, sans-serif;
-            background: #1a1a1a;
-            color: #fff;
-        }
-
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100%;
-            text-align: center;
-        }
-
-        .welcome-text {
-            font-size: 48px;
-            font-weight: bold;
-            margin-top: 20px;
-            color: #ffcc00;
-            text-shadow: 2px 2px 8px #000;
-        }
-
-        .image-wrapper img {
-            max-width: 80%;
-            max-height: 60%;
-            border: 3px solid #ffcc00;
-            border-radius: 15px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Добро пожаловать на сервер</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #111;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+    .container {
+      padding: 40px;
+    }
+    h1 {
+      font-size: 36px;
+      margin-bottom: 20px;
+    }
+    img {
+      max-width: 80%;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+    }
+    p {
+      margin-top: 20px;
+      font-size: 18px;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="image-wrapper">
-            <img src="https://i.postimg.cc/yYsfmsjS/image.jpg" alt="MOTD Image">
-        </div>
-        <div class="welcome-text">Добро пожаловать!</div>
-    </div>
+  <div class="container">
+    <h1>Welcome to my GMod Server!</h1>
+    <img src="https://i.postimg.cc/yYsfmsjS/image.jpg" alt="Server Image">
+    <p>Правила и ссылки появятся здесь позже 😉</p>
+  </div>
 </body>
 </html>
