--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to my GMod Server!</h1>
+    <h1>Приветствуем вас на нашем проекте MoonLightProject</h1>
     <img src="https://i.postimg.cc/yYsfmsjS/image.jpg" alt="Server Image">
     <p>Правила и ссылки появятся здесь позже 😉</p>
   </div>
 </body>
 </html>
+
