--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Добро пожаловать на сервер</title>
+  <title>Добро пожаловат на проект!</title>
   <style>
     body {
       margin: 0;
@@ -37,4 +37,5 @@
   </div>
 </body>
 </html>
+
 
